$Id: ChangeLog,v 1.69 2004/05/09 11:32:17 h_oudejans Exp $

2004-05-09 Maarten ter Huurne <maarten@treewalker.org>
	* Ported system probe from openMSX to Catapult.

2004-05-09 Herman Oudejans <hn.oudejans@quicknet.nl>
	* made the windows build system work with the version info
	* updated the README to point out the manuals	

2004-05-08 Maarten ter Huurne <maarten@treewalker.org>
	* Ported build system stuff from openMSX to Catapult.
	  Includes handling of version info.
	* Implemented "make dist".

2004-05-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added manuals (thx to Manuel).

2004-04-30 Herman Oudejans <hn.oudejans@quicknet.nl>
	* the m_command != NULL assert should be fixed now. I tried 
	   to reproduce the assert but just couldn't.

2004-04-27 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Personal share dir is now also used in windows to find machines
	   and extensions
	* Items added to history are now converted to the native (back)slash.
	* file filters with capitals extensions added. .DSK and alike should now be
	   also found in linux.
	* If normal tape (wave) is used and the machine is equiped with a
	   cassetteport it's automaticly plugged.

2004-04-25 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Catapult now initially guesses where openmsx could be and checks
	   for it. If users maintain default values, those values should be good
	   from the start.
	* Fixed a bug in returning from fullscreen in Windows.
	* Cataputl should now accept non-dev openmsx versions higher than 
	   0.3.4. This should cause the soon to release 0.4.0 to be accepted as
	   a new version instead of an old.
	* Fixed the layout of the midi/sample panel a bit.

2004-04-20 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Move screen after returning from full screen is now ONLY done
	   with an old openmsx.	

2004-04-18 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fullscreen button in windows works.
	* removed segfault in ChangeJoystickport.